--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,16 @@ button:hover{
     color: #000000;
 }
 
+#msgError{
+    /* background-color: #ffd1d1; */
+    height: 13px;
+    width: 80%;
+    color: rgb(255, 0, 0);
+    font-size: 10px;
+    border-radius: 3px;
+    margin: 0 auto;
+}
+
 h3{
     color: #192b93;
 }
